--- a/adreses.html
+++ b/adreses.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Labdien</div>
+        <div>TODO write content</div>
+        <a href="adreses.html">adreses</a>
     </body>
 </html>
