--- a/adreses.html
+++ b/adreses.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>labdien</div>
-        <a href="adreses.html">adreses</a>
+        <div>labdien visiem</div>
+        <a href="index.html">index</a>
     </body>
 </html>
