--- a/skola.html
+++ b/skola.html
@@ -11,9 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Labdien cau</div>
-        <a href="skola.html"> saite uz skolas lapinu<a/>
-          
-         <a href="adreses.html">adreses</a>
+        <div>TODO write content</div>
     </body>
 </html>
