--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     <body>
         <div>Labdien cau</div>
         <a href="skola.html"> saite uz skolas lapinu<a/>
-          
+            <a href="darbibas.html"> darbibas<a/>
          <a href="adreses.html">adreses</a>
     </body>
 </html>
